--- a/4 Ano/Ingenieria del Software II/Examenes/Diseno.lyx
+++ b/4 Ano/Ingenieria del Software II/Examenes/Diseno.lyx
@@ -138,6 +138,24 @@ Enuncia la definición de herencia que se comentó en clase y enumere sus
  ventajas y desventajas.
 \end_layout
 
+\begin_layout Enumerate
+Explique el método propuesto por Parnas para diseñar un sistema de software.
+\end_layout
+
+\begin_layout Enumerate
+Defina módulo, interfaz e implementación.
+\end_layout
+
+\begin_layout Enumerate
+Defina el concepto de herencia y extienda la metodología de Parnas para
+ que lo tenga en cuenta.
+\end_layout
+
+\begin_layout Enumerate
+Indique el criterio de corrección para un diseño.
+ Justifique su respuesta.
+\end_layout
+
 \begin_layout Section
 Ejercicios prácticos
 \end_layout
@@ -188,7 +206,7 @@ Estructura de objetos
 \end_layout
 
 \begin_layout Subsection
-Empresa de colectivos
+Control de stock
 \end_layout
 
 \begin_layout Subsubsection
